--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-assignment_2/myenv/
-assignment_2/AARP fits files/
-assignment_2/as_2_sharp_test_2.py
-assignment_2_SHARP_AARP.py
-**/__pycache__/
+*
+!assignment_2_sharp_aarp.py
+!assignment_2_sharp_aarp.py
+!README.md
+!requirements.txt
